LegacyDOMRpcImplementationAdapter is generic
We are bridging to a well-defined RpcService subclass, hence this
should be captured in the field type -- making the class generic.

Change-Id: I46019e6e821a798474f639737c6fefe199bae8ee
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>